fix misaligned text-container responsivity

--- a/docs/assets/css/style.css
+++ b/docs/assets/css/style.css
@@ -192,4 +192,8 @@ a:hover {
   button {
     width: 100%;
   }
+
+  .search-container {
+    text-align: center;
+  }
 }
